--- a/agenda/templates/agenda_lista.html
+++ b/agenda/templates/agenda_lista.html
@@ -3,16 +3,16 @@
 {% block content %}
   <h1 class="page-header">Agenda</h1>
   <table class="table" id="agenda-table">
-    <thead>
+    <thead class="thead-dark">
       <tr>
-        <th>#</th>
-        <th>Descripcion</th>
-        <th>MateriaId</th>
-        <th>CreatedOn</th>
-        <th>CreatedBy</th>
-        <th>DeletetedOn</th>
-        <th>DeletedBy</th>
-        <th>Completed</th>
+        <th scope="col">#</th>
+        <th scope="col">Descripcion</th>
+        <th scope="col">MateriaId</th>
+        <th scope="col">CreatedOn</th>
+        <th scope="col">CreatedBy</th>
+        <th scope="col">DeletetedOn</th>
+        <th scope="col">DeletedBy</th>
+        <th scope="col">Completed</th>
       </tr>
     </thead>
     <tbody>
