--- a/agenda/templates/base.html
+++ b/agenda/templates/base.html
@@ -18,9 +18,9 @@
       {% endblock %}
     </div>
     <!-- JQUERY HERE -->
-    <!-- <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>  
+    <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>  
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    {% block javascript %} -->
+    {% block javascript %}
     {% endblock %}
   </body>
 </html>
