agenda_lista funcionando

--- a/agenda/templates/home.html
+++ b/agenda/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-<!-- {% load static %} -->
+{% load static %}
 
 <!-- {% block stylesheet %}
   <link rel="stylesheet" href="{% static 'css/usuarios.css' %}">
