--- a/agenda/templates/agenda_lista.html
+++ b/agenda/templates/agenda_lista.html
@@ -10,26 +10,30 @@
         <th scope="col">MateriaId</th>
         <th scope="col">CreatedOn</th>
         <th scope="col">CreatedBy</th>
+        <th scope="col">ChangedOn</th>
+        <th scope="col">ChangedBy</th>
         <th scope="col">DeletetedOn</th>
         <th scope="col">DeletedBy</th>
         <th scope="col">Completed</th>
       </tr>
     </thead>
     <tbody>
-      {% for x in agenda %}
+      {% for x in datos %}
         <tr>
           <td>{{ x.Id }}</td>
           <td>{{ x.Descripcion }}</td>
           <td>{{ x.MateriaId }}</td>
           <td>{{ x.CreatedOn }}</td>
           <td>{{ x.CreatedBy }}</td>
+          <td>{{ x.ChangedOn }}</td>
+          <td>{{ x.ChangedBy }}</td>
           <td>{{ x.DeletedOn }}</td>
           <td>{{ x.DeletedBy }}</td>
           <td>{{ x.IsDeleted }}</td>
         </tr>
       {% empty %}
         <tr>
-          <td colspan="7" class="text-center bg-warning">Vacio</td>
+          <td colspan="10" class="text-center bg-warning">Vacio</td>
         </tr>
       {% endfor %}
     </tbody>
