--- a/agenda/templates/base.html
+++ b/agenda/templates/base.html
@@ -1,39 +1,51 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Agenda</title>
-    <link href="{% static 'agenda/css/bootstrap.min.css' %}" rel="stylesheet">
-    <!--[if lt IE 9]>
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Agenda</title>
+	<link href="{% static 'agenda/css/bootstrap.min.css' %}" rel="stylesheet">
+	<!-- [if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    
-    <div class="container">
-      {% block content %}
-      <nav class="navbar navbar-expand-sm">
-        <div class="navbar-header">
-          <a class="nvabar-brand" href="{%url 'home'%}">
-            home
-          </a>
-        </div>
+    <![endif] -->
+</head>
 
-        <div class="navbar-header">
-          <a class="nvabar-brand" href="{%url 'agenda_lista'%}">
-            lista
-          </a>
-        </div>
-      </nav>
-      {% endblock %}
-    </div>
-    <!-- JQUERY HERE -->
-    <script src="{% static 'agenda/js/jquery-3.1.1.min.js' %}"></script>  
-    <script src="{% static 'agenda/js/bootstrap.min.js' %}"></script>
-    {% block javascript %}
-    {% endblock %}
-  </body>
+<body>
+	{% block body %}
+	<nav class="navbar navbar-expand-sm navsistema">
+		
+		<div class="container">
+
+			<div class="navbar-header">
+				<a class="nvabar-brand" href="{% url 'home' %}">
+					home
+				</a>
+			</div>
+			
+			<div class="navbar-header">
+				<a class="nvabar-brand" href="{% url 'agenda_lista' %}">
+					lista
+				</a>
+			</div>
+
+		</nav>
+	</div>
+	
+	<div>
+		{% block content %}
+		{% endblock %}
+	</div>
+
+	{% endblock body %}
+	
+	<script src="{% static 'agenda/js/jquery-3.1.1.min.js' %}"></script>
+	<script src="{% static 'agenda/js/bootstrap.min.js' %}"></script>
+	{% block javascript %}
+	{% endblock %}
+</body>
+
 </html>
