--- a/agenda/templates/base.html
+++ b/agenda/templates/base.html
@@ -22,13 +22,13 @@
 
 			<div class="navbar-header">
 				<a class="nvabar-brand" href="{% url 'home' %}">
-					home
+					HOME
 				</a>
 			</div>
 			
 			<div class="navbar-header">
 				<a class="nvabar-brand" href="{% url 'agenda_lista' %}">
-					lista
+					LISTA
 				</a>
 			</div>
 
@@ -42,7 +42,7 @@
 
 	{% endblock body %}
 	
-	<script src="{% static 'agenda/js/jquery-3.1.1.min.js' %}"></script>
+	<script src="{% static 'agenda/js/jquery-3.3.1.min.js' %}"></script>
 	<script src="{% static 'agenda/js/bootstrap.min.js' %}"></script>
 	{% block javascript %}
 	{% endblock %}
