--- a/agenda/templates/base.html
+++ b/agenda/templates/base.html
@@ -16,26 +16,22 @@
 
 <body>
 	{% block body %}
-	<nav class="navbar navbar-expand-sm navsistema">
-		
-		<div class="container">
-
-			<div class="navbar-header">
-				<a class="nvabar-brand" href="{% url 'home' %}">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" href="{% url 'home' %}">
 					HOME
 				</a>
-			</div>
-			
-			<div class="navbar-header">
-				<a class="nvabar-brand" href="{% url 'agenda_lista' %}">
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="{% url 'agenda_lista' %}">
 					LISTA
 				</a>
-			</div>
-
-		</nav>
-	</div>
+			</li>
+		</ul>
+	</nav>
 	
-	<div>
+	<div class="container">
 		{% block content %}
 		{% endblock %}
 	</div>
