--- a/agenda/templates/agenda_lista_parcial.html
+++ b/agenda/templates/agenda_lista_parcial.html
@@ -11,19 +11,18 @@
     <td>{{ x.DeletedBy }}</td>
     <td>{{ x.IsDeleted }}</td> -->
     <td>
-        <button class="btn btn-secondary js-modificar-item"
-        data-url="{% url 'modificar_item' x.Id %}">
-        <span class="glyphicon glyphicon-pencil"></span>
+        <button class="btn btn-secondary js-modificar-item" data-url="{% url 'editar' x.Id %}">
+            <span class="glyphicon glyphicon-pencil"></span>
             Modificar
         </button>
     </td>
-    <td><button class="btn btn-warning js-borrar-item"
-        data-url="{% url 'borrar_item' x.Id as borrar %}">
+    <td>
+        <button class="btn btn-warning js-borrar-item" data-url="{% url 'borrar_item' x.Id %}">
             <span class="glyphicon glyphicon-trash"></span>
             Borrar
         </button>
     </td>
-    </tr>
+</tr>
 {% empty %}
 <tr>
     <td colspan="5" class="text-center bg-warning">Vacio</td>
