--- a/agenda/templates/base.html
+++ b/agenda/templates/base.html
@@ -8,6 +8,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Agenda</title>
 	<link href="{% static 'agenda/css/bootstrap.min.css' %}" rel="stylesheet">
+	<link href="{% static 'agenda/css/bootstrap.css' %}" rel="stylesheet">
+
+
 	<!-- [if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -40,6 +43,7 @@
 	
 	<script src="{% static 'agenda/js/jquery-3.3.1.min.js' %}"></script>
 	<script src="{% static 'agenda/js/bootstrap.min.js' %}"></script>
+
 	{% block javascript %}
 	{% endblock %}
 </body>
