--- a/agenda/templates/borrar_parcial.html
+++ b/agenda/templates/borrar_parcial.html
@@ -1,14 +1,18 @@
-<form method="post" action="{% url 'borrar_item' elemento.Id %}" class="js-borrar-item-form">
+<form method="post" action="{% url 'borrar_item' pk=item.Id %}" class="js-boton-borrar">
+
 	{% csrf_token %}
+
 	<div class="modal-header">
 		<h4 class="modal-title">Confimar Borrado</h4>
 		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 			<span aria-hidden="true">&times;</span>
 		</button>
 	</div>
+
 	<div class="modal-body">
-		<p class="lead">¿Seguro desea borrar <strong>{{ elemento.Descripcion }}</strong>?</p>
+		<p class="lead">¿Seguro desea borrar <strong>{{ item.Descripcion }}</strong> Id:<strong>{{item.MateriaId}}</strong>?</p>
 	</div>
+	
 	<div class="modal-footer">
 		<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
 		<button type="submit" class="btn btn-danger">Borrar Item</button>
