--- a/templates/agenda_lista.html
+++ b/templates/agenda_lista.html
@@ -49,14 +49,14 @@
 	</tbody>
 </table>
 
-<p>
+<!-- <p>
 	<button class="btn btn-danger js-borrar-todo">
-		<span class="glyphicon glyphicon-remove-circle"></span>
+		<span class="glyphicon glformyphicon-remove-circle"></span>
 		Borrar Todo
 	</button>
-</p>
+</p> -->
 
-<div class="modal fade" id="modal-agenda">
+<div class="modal fade" id="modal-agenda" data-keyboard="false" data-backdrop="static">
 	<div class="modal-dialog">
 		<div class="modal-content">
 		</div>
