--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,9 @@
 
 <body>
 	{% block body %}
+	
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		{% if user.is_authenticated %}
 		<ul class="navbar-nav">
 			<li class="nav-item">
 				<a class="nav-link" href="{% url 'home' %}">
@@ -32,6 +34,20 @@
 				</a>
 			</li>
 		</ul>
+		<ul class="nav justify-content-end">
+			<li class="nav-item">
+				<a class="nav-link" href="{% url 'logout' %}" title="logout">
+					LOGOUT
+				</a>
+			</li>
+		{% else %}
+			<li class="nav-item">
+				<a class="nav-link" href="{% url 'login' %}" title="login">
+					LOGIN
+				</a>
+			</li>
+		</ul>
+		{% endif %}
 	</nav>
 	
 	<div class="container">
@@ -40,7 +56,7 @@
 	</div>
 
 	{% endblock body %}
-	
+
 	<script src="{% static 'agenda/js/jquery-3.3.1.min.js' %}"></script>
 	<script src="{% static 'agenda/js/bootstrap.min.js' %}"></script>
 
