Custom user half way

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,31 +22,35 @@
 	
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		{% if user.is_authenticated %}
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'home' %}">
-					HOME
-				</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'agenda_lista' %}">
-					LISTA
-				</a>
-			</li>
-		</ul>
-		<ul class="nav justify-content-end">
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'logout' %}" title="logout">
-					LOGOUT
-				</a>
-			</li>
-		{% else %}
-			<li class="nav-item">
-				<a class="nav-link" href="{% url 'login' %}" title="login">
-					LOGIN
-				</a>
-			</li>
-		</ul>
+		<div style="float:left">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'home' %}">
+						HOME
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'agenda_lista' %}">
+						LISTA
+					</a>
+				</li>
+			</ul>
+		</div>
+		<div style="float:right">
+			<ul class="nav justify-content-end">
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'logout' %}" title="logout">
+						LOGOUT
+					</a>
+				</li>
+			{% else %}
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'login' %}" title="login">
+						LOGIN
+					</a>
+				</li>
+			</ul>
+		</div>
 		{% endif %}
 	</nav>
 	
