Personalizacion de usuario en django admin

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,11 @@
 		<div style="float:right">
 			<ul class="nav justify-content-end">
 				<li class="nav-item">
+					<a class="nav-link" href="{% url 'admin:index' %}" title="admin">
+						ADMIN
+					</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="{% url 'logout' %}" title="logout">
 						LOGOUT
 					</a>
