--- a/templates/borrar_parcial.html
+++ b/templates/borrar_parcial.html
@@ -10,7 +10,9 @@
 	</div>
 
 	<div class="modal-body">
-		<p class="lead">¿Seguro desea borrar <strong>{{ item.Descripcion }}</strong> Id:<strong>{{item.MateriaId}}</strong>?</p>
+		<p class="lead">¿Seguro desea borrar 
+		{% comment %} <strong>{{ item.nombre }}</strong> Id:<strong>{{item.MateriaId}}</strong> {% endcomment %}
+		?</p>
 	</div>
 	
 	<div class="modal-footer">
