--- a/templates/ag_item_parcial_form.html
+++ b/templates/ag_item_parcial_form.html
@@ -1,5 +1,7 @@
 {% load widget_tweaks %}
 
+{% load static %}
+
 {% for field in form %}
 <div class="form-group{% if field.errors %} has-error{% endif %}">
     <label for="{{ field.id_for_label }}">{{ field.label }}</label>
