--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Contenido Minimo</title>
+	<title>Contenido M&iacutenimo</title>
 	<link href="{% static 'agenda/css/bootstrap.min.css' %}" rel="stylesheet">
 	<link href="{% static 'agenda/css/bootstrap.css' %}" rel="stylesheet">
 
@@ -23,7 +23,7 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		{% if user.is_authenticated %}
 		<div style="float:left">
-			<ul class="navbar-nav">
+			{% comment %} <ul class="navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'home' %}">
 						HOME
@@ -34,24 +34,24 @@
 						LISTA
 					</a>
 				</li>
-			</ul>
+			</ul> {% endcomment %}
 		</div>
 		<div style="float:right">
 			<ul class="nav justify-content-end">
-				<li class="nav-item">
+				{% comment %} <li class="nav-item">
 					<a class="nav-link" href="{% url 'admin:index' %}" title="admin">
 						ADMIN
 					</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item"> {% endcomment %}
 					<a class="nav-link" href="{% url 'logout' %}" title="logout">
-						LOGOUT
+						CERRAR SESI&OacuteN
 					</a>
-				</li>
+				{% comment %}</li>{% endcomment %}
 			{% else %}
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'login' %}" title="login">
-						LOGIN
+						INICIAR SESI&OacuteN
 					</a>
 				</li>
 			</ul>
@@ -67,6 +67,10 @@
 	{% endblock body %}
 
 	<script src="{% static 'agenda/js/jquery-3.3.1.min.js' %}"></script>
+	{% comment %} <script
+			  src="https://code.jquery.com/jquery-3.1.0.min.js"
+			  integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
+			  crossorigin="anonymous"></script> {% endcomment %}
 	<script src="{% static 'agenda/js/bootstrap.min.js' %}"></script>
 	{% block javascript %}
 	{% endblock %}
