--- a/templates/modificar_item_parcial.html
+++ b/templates/modificar_item_parcial.html
@@ -1,4 +1,4 @@
-<form method="post" action="{% url 'editar' pk=form.Id %}" class="js-boton-modificar">
+<form method="post" action="{% url 'editar' pk=item.Id %}" class="js-boton-modificar">
 
     {% csrf_token %}
 
