Correcion de errores en UI
Boton "ver" no respondia luego de llamada a Ajax

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="{% url 'agenda_lista' %}">
+					<a class="nav-link" href="{% url 'lista' %}">
 						LISTA
 					</a>
 				</li>
