--- a/templates/lista.html
+++ b/templates/lista.html
@@ -22,18 +22,18 @@
 <table class="table" id="agenda-table">
 	<thead class="thead-dark">
 		<tr style="text-align: center">
-			<th scope="col">#</th>
+			{% comment %} <th scope="col">#</th> {% endcomment %}
+			<th scope="col">Elemento</th>
 			<th scope="col">Departamento</th>
 			<th scope="col">Carrera</th>
 			<th scope="col">Asignatura</th>			
-			<th scope="col">Elemento</th>
 			<th scope="col">Ver</th>
 			<th scope="col">Modificar</th>
 			<th scope="col">Eliminar</th>
 		</tr>
 	</thead>
 	<tbody>
-		{% include 'agenda_lista_parcial.html' %}
+		{% include 'lista_parcial.html' %}
 	</tbody>
 </table>
 
