--- a/templates/modificar_item_parcial.html
+++ b/templates/modificar_item_parcial.html
@@ -3,7 +3,7 @@
     {% csrf_token %}
 
     <div class="modal-header">
-        <h2 class="modal-title">Modificar Item - {{ form.Id }}</h2>
+        <h2 class="modal-title">{{ objeto.nombre }}</h2>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
