--- a/templates/ver_item_parcial.html
+++ b/templates/ver_item_parcial.html
@@ -17,7 +17,7 @@
         <label>Carrera: {{ dato.Carrera.nombre_propuesta }}</label><br>
         {% comment %} <label>Asignatura: {{ dato.Materia.nombre }}</label><br> {% endcomment %}
         <label>Descripci&oacuten: </label>
-        <p>{{ item.Descripcion }} </p>
+        <p style="overflow:auto">{{ item.Descripcion }} </p>
     </div>
 
     <div class="modal-footer">
