--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 	
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		{% if user.is_authenticated %}
-		<div style="float:left">
+		<div style="width:70%; float:left">
 			{% comment %} <ul class="navbar-nav">
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'home' %}">
@@ -36,7 +36,7 @@
 				</li>
 			</ul> {% endcomment %}
 		</div>
-		<div style="float:right">
+		<div style="width:30%; float:right">
 			<ul class="nav justify-content-end">
 				{% comment %} <li class="nav-item">
 					<a class="nav-link" href="{% url 'admin:index' %}" title="admin">
@@ -44,16 +44,16 @@
 					</a>
 				</li>
 				<li class="nav-item"> {% endcomment %}
-					<a class="nav-link" href="{% url 'logout' %}" title="logout">
-						CERRAR SESI&OacuteN
+					<a class="nav-link glyphicon glyphicon-log-out" href="{% url 'logout' %}" title="logout">
+						Salir
 					</a>
 				{% comment %}</li>{% endcomment %}
-			{% else %}
+			{% comment %} {% else %}
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'login' %}" title="login">
 						INICIAR SESI&OacuteN
 					</a>
-				</li>
+				</li> {% endcomment %}
 			</ul>
 		</div>
 		{% endif %}
