--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,12 +3,12 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h2>Login</h2>
+<h2>Iniciar Sesi&oacuten</h2>
 <form method="post">
     <div class="form-group">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary glyphicon glyphicon-log-in"> Ingresar</button>
     </div>
 </form>
 {% endblock %}
