--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,12 +3,21 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h2>Iniciar Sesi&oacuten</h2>
-<form method="post">
-    <div class="form-group">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary glyphicon glyphicon-log-in"> Ingresar</button>
+<div class="container" style="width:50%; margin:auto; padding:10%%">
+    <div class="col-sm-8">
+        <div class="panel panel-default">
+            <div class="panel-heading"><h3>Iniciar Sesi&oacuten</h3></div>
+            <div class="panel-body">
+                {% comment %} <h2>Iniciar Sesi&oacuten</h2> {% endcomment %}
+                <form method="post">
+                    <div class="form-group">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit" class="btn btn-primary glyphicon glyphicon-log-in"> Ingresar</button>
+                    </div>
+                </form>
+
+        </div>
     </div>
-</form>
+</div>
 {% endblock %}
